--- a/less/about.less
+++ b/less/about.less
@@ -15,6 +15,9 @@ html{
 
         nav{
             background-color:rgb(27, 182, 40);
+             padding-top: 5px;
+             padding-bottom: 5px;
+            // border-radius: 12px;
            
             display: flex;
             justify-content: center;
@@ -61,10 +64,12 @@ html{
             flex-direction: row;
         }
         .aside-left{
-            width: 150%;
+            width: 25%;
             font-size: 1rem;
             margin-right: 10px;
+            margin-top: 0px;
             padding: 10px;
+            padding-top: 0px;
             box-sizing: border-box;
             background-color: pink;
 
@@ -76,6 +81,7 @@ html{
                 font-size: 1.2rem;
                 font-weight: bold;
                 text-align: center;
+                   margin-bottom: 0;
                 &:hover{
                     background: white;
                     color: rgb(138, 131, 131);
@@ -85,6 +91,7 @@ html{
             }
         }
         .text-right{
+            width: 75%;
              display: flex;
             flex-direction: column;
             box-sizing: border-box;
