--- a/css/about.css
+++ b/css/about.css
@@ -2,18 +2,11 @@ html {
   background-color: #fff7e0;
   margin: 0px;
   padding: 0px;
-  font-family: 'Public Sans', sans-serif;
   line-height: 1.6;
-}
-@font-face {
-  font-family: 'Public Sans';
-  font-style: normal;
-  font-weight: 400;
-  font-display: swap;
-  src: url(https://fonts.gstatic.com/s/publicsans/v2/ijwGs572Xtc6ZYQws9YVwllKVG8qX1oyOymuFpmJxAct.ttf) format('truetype');
 }
 html body {
   font-size: 62.5%;
+  box-sizing: border-box;
 }
 html body nav {
   background-color: #1bb628;
@@ -73,7 +66,6 @@ html body .aside-left .aside-title {
   font-size: 1.2rem;
   font-weight: bold;
   text-align: center;
-  margin-bottom: 0;
 }
 html body .aside-left .aside-title:hover {
   background: white;
@@ -87,7 +79,27 @@ html body .text-right {
   font-size: 1rem;
   padding-right: 5%;
 }
-html body .text-right .parag-title {
+html body .text-right .parag-content-top {
+  display: flex;
+}
+html body .text-right .parag-content-top .child {
+  width: 50%;
+  height: auto;
+}
+html body .text-right .parag-content-top .child-image {
+  width: 100%;
+}
+html body .text-right .parag-content-top .child-image .prof-image {
+  width: 100%;
+  height: 100%;
+  padding-top: 5%;
+  border-radius: 12px;
+}
+html body .text-right .parag-content-top .child-text {
+  width: 100%;
+  padding-left: 2%;
+}
+html body .parag-title {
   margin: 1%, 2%;
   font-size: 1rem;
   width: fit-content;
@@ -95,12 +107,12 @@ html body .text-right .parag-title {
   font-size: 1.2rem;
   font-weight: bold;
 }
-html body .text-right .parag-title .parag-content {
+html body .parag-title .parag-content {
   color: #da3e3e;
   font-size: 1rem;
 }
 @media (max-width: 500px) {
-  html body .text-right .parag-title .parag-content {
+  html body .parag-title .parag-content {
     display: flex;
     color: Green;
     justify-content: center;
@@ -108,21 +120,21 @@ html body .text-right .parag-title .parag-content {
     font-size: 1.5rem;
   }
 }
-html body .this-is-the-footer {
+html .this-is-the-footer {
   background-color: gray;
   display: flex;
   width: 100%;
   justify-content: center;
   margin: auto;
 }
-html body .this-is-the-footer a {
+html .this-is-the-footer a {
   font-size: 0.8rem;
   color: whitesmoke;
   margin: 5%;
   justify-content: center;
   font-weight: bold;
 }
-html body .this-is-the-footer a:hover {
+html .this-is-the-footer a:hover {
   color: black;
   border-radius: 3px;
 }
