--- a/less/index.less
+++ b/less/index.less
@@ -133,7 +133,45 @@ table {
 //Begin Desktop styling
 #main_container {
   border: solid black 3px;
-  max-width: 1200px;
+  max-width: 1450px;
   width: 100%;
   margin: 0 auto;
+
+  .top-nav {
+    .home-nav {
+      display: flex;
+      justify-content: space-evenly;
+
+      .nav_item {
+        margin-top: 7.5%;
+
+        button:hover {
+          border-radius: 50%;
+          height: 50px;
+          width: 100px;
+          margin-top: -15px;
+          background-color: #4caf50; /* Green */
+          color: white;
+        }
+      }
+    }
+  }
+
+  .header-CTA {
+    border: solid red 3px;
+
+    h1,
+    p {
+      border: solid orange 3px;
+      display: flex;
+      justify-content: center;
+    }
+
+    .header-button {
+      margin-left: 35%;
+      border-radius: 35%;
+      width: 400px;
+      height: 50px;
+    }
+  }
 }
