--- a/css/index.css
+++ b/css/index.css
@@ -129,7 +129,7 @@ table {
 /*---End CSS Reset*/
 #main_container {
   border: solid black 3px;
-  max-width: 1450px;
+  max-width: 1200px;
   width: 100%;
   margin: 0 auto;
 }
@@ -150,17 +150,23 @@ table {
   color: white;
 }
 #main_container .header-CTA {
-  border: solid red 3px;
+  background-image: url("https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-repeat: no-repeat;
+  height: 500px;
 }
-#main_container .header-CTA h1,
-#main_container .header-CTA p {
-  border: solid orange 3px;
+#main_container .header-CTA h1 {
   display: flex;
   justify-content: center;
+  margin-top: 50px;
+  color: black;
+  background-color: #34ebb1;
+  width: 100%;
 }
 #main_container .header-CTA .header-button {
   margin-left: 35%;
+  margin-top: 350px;
   border-radius: 35%;
   width: 400px;
   height: 50px;
+  font-size: 2em;
 }
