--- a/less/index.less
+++ b/less/index.less
@@ -179,4 +179,35 @@ table {
       font-size: 2em;
     }
   }
+
+  .showcase-feats {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+
+    h3 {
+      font-weight: bold;
+      margin-top: 75px;
+    }
+
+    .feat-container1 {
+      padding: 20px;
+    }
+
+    .feat-container2 {
+      padding: 20px;
+
+      p {
+        margin-top: 25px;
+      }
+    }
+
+    .feat-container3 {
+      padding: 20px;
+
+      p {
+        margin-top: 25px;
+      }
+    }
+  }
 }
