--- a/less/index.less
+++ b/less/index.less
@@ -132,7 +132,6 @@ table {
 
 //Begin Desktop styling
 #main_container {
-  border: solid black 3px;
   max-width: 1200px;
   width: 100%;
   margin: 0 auto;
@@ -209,5 +208,21 @@ table {
         margin-top: 25px;
       }
     }
+  }
+
+  .carousel-inner {
+    img {
+      width: 300px;
+    }
+
+    div {
+      color: black;
+      font-weight: bold;
+    }
+  }
+
+  footer {
+    max-width: 50%;
+    margin-left: 475px;
   }
 }
