--- a/css/about.css
+++ b/css/about.css
@@ -8,13 +8,31 @@ html body {
   font-size: 62.5%;
   box-sizing: border-box;
 }
+@media (max-width: 500px) {
+  html body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+  }
+}
 html body nav {
-  background-color: #1bb628;
-  padding-top: 5px;
-  padding-bottom: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #1bb628;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+@media (max-width: 500px) {
+  html body nav {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    background-color: #fff7e0;
+    color: black;
+  }
 }
 html body nav .logo-container {
   width: 48%;
@@ -22,11 +40,29 @@ html body nav .logo-container {
   color: #a50909;
   margin-left: 1%;
 }
+@media (max-width: 500px) {
+  html body nav .logo-container {
+    width: 100%;
+    justify-content: center;
+  }
+}
 html body nav .nav-elem-container {
   width: 48%;
   display: flex;
   justify-content: flex-end;
   justify-content: space-around;
+}
+@media (max-width: 500px) {
+  html body nav .nav-elem-container {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 30px;
+    margin-right: 30px;
+    align-items: center;
+    box-sizing: border-box;
+  }
 }
 html body nav .nav-elem-container a {
   align-items: center;
@@ -44,11 +80,23 @@ html body nav .nav-elem-container a {
 html body nav .nav-elem-container a:hover {
   color: red;
 }
+@media (max-width: 500px) {
+  html body nav .nav-elem-container a {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    padding-top: 10px;
+    margin-top: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    justify-content: space-around;
+  }
+}
 html body .main-container {
   display: flex;
   flex-direction: row;
 }
-html body .aside-left {
+html body .main-container .aside-left {
   width: 25%;
   font-size: 1rem;
   margin-right: 10px;
@@ -58,7 +106,12 @@ html body .aside-left {
   box-sizing: border-box;
   background-color: pink;
 }
-html body .aside-left .aside-title {
+@media (max-width: 500px) {
+  html body .main-container .aside-left {
+    display: none;
+  }
+}
+html body .main-container .aside-left .aside-title {
   background-color: #8a8383;
   border-radius: 12px;
   padding: 5px;
@@ -67,74 +120,112 @@ html body .aside-left .aside-title {
   font-weight: bold;
   text-align: center;
 }
-html body .aside-left .aside-title:hover {
+html body .main-container .aside-left .aside-title:hover {
   background: white;
   color: #8a8383;
 }
-html body .text-right {
+html body .main-container .text-right {
   width: 75%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
   font-size: 1rem;
   padding-right: 5%;
+  color: black;
 }
-html body .text-right .parag-content-top {
+@media (max-width: 500px) {
+  html body .main-container .text-right {
+    width: 98%;
+    justify-content: center;
+    padding-left: 2%;
+    padding-right: 2%;
+    box-sizing: border-box;
+  }
+}
+html body .main-container .text-right .parag-content-top {
   display: flex;
 }
-html body .text-right .parag-content-top .child {
+@media (max-width: 500px) {
+  html body .main-container .text-right .parag-content-top {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+html body .main-container .text-right .parag-content-top .child {
+  padding-left: 1%;
+  box-sizing: border-box;
   width: 50%;
   height: auto;
 }
-html body .text-right .parag-content-top .child-image {
-  width: 100%;
+@media (max-width: 500px) {
+  html body .main-container .text-right .parag-content-top .child {
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+  }
 }
-html body .text-right .parag-content-top .child-image .prof-image {
+html body .main-container .text-right .parag-content-top .child .prof-image {
   width: 100%;
   height: 100%;
   padding-top: 5%;
   border-radius: 12px;
 }
-html body .text-right .parag-content-top .child-text {
+html body .main-container .text-right .parag-content-top .child .child-text {
   width: 100%;
   padding-left: 2%;
 }
-html body .parag-title {
-  margin: 1%, 2%;
+html body .main-container .text-right .parag-title {
+  margin: 0, 1%;
   font-size: 1rem;
   width: fit-content;
   padding: 1%;
   font-size: 1.2rem;
   font-weight: bold;
 }
-html body .parag-title .parag-content {
-  color: #da3e3e;
+@media (max-width: 500px) {
+  html body .main-container .text-right .parag-title {
+    font-size: 2rem;
+    margin: auto;
+  }
+}
+html body .main-container .text-right .parag-content {
+  color: black;
   font-size: 1rem;
 }
 @media (max-width: 500px) {
-  html body .parag-title .parag-content {
+  html body .main-container .text-right .parag-content {
     display: flex;
-    color: Green;
+    flex-direction: column;
+    color: black;
     justify-content: center;
     align-content: center;
     font-size: 1.5rem;
   }
 }
-html .this-is-the-footer {
+html body .this-is-the-footer {
   background-color: gray;
   display: flex;
   width: 100%;
   justify-content: center;
   margin: auto;
 }
-html .this-is-the-footer a {
+@media (max-width: 500PX) {
+  html body .this-is-the-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #8a8383;
+  }
+}
+html body .this-is-the-footer a {
   font-size: 0.8rem;
   color: whitesmoke;
   margin: 5%;
   justify-content: center;
   font-weight: bold;
 }
-html .this-is-the-footer a:hover {
+html body .this-is-the-footer a:hover {
   color: black;
   border-radius: 3px;
 }
