--- a/less/about.less
+++ b/less/about.less
@@ -10,18 +10,33 @@ html{
     body{
         font-size: 62.5%;
         box-sizing: border-box;
+
+        @media(max-width: 500px){
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            font-size: 2rem;
+        }
        
 
 
         nav{
-            background-color:rgb(27, 182, 40);
-             padding-top: 5px;
-             padding-bottom: 5px;
-           
-           
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color:rgb(27, 182, 40);
+             padding-top: 5px;
+             padding-bottom: 5px;
+             
+             @media(max-width: 500px){
+                 display: flex;
+                 flex-direction: column;
+                 text-align: center;
+                  background-color: rgb(255, 247, 224);
+                  color: black;
+             } // @media
+
         
 
             .logo-container{
@@ -29,16 +44,30 @@ html{
             font-size: 1.2rem;
             color: rgb(165, 9, 9);
             margin-left: 1%;
-           
-            
-            }
+
+            @media (max-width: 500px) {
+                width: 100%;
+                justify-content: center;
+            } // @media
+            } // .logo-container
+
             .nav-elem-container{
             width: 48%;
             display: flex;
             justify-content: flex-end;
             justify-content: space-around;
-    
 
+            @media (max-width: 500px){
+                width: 90%;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                margin-left: 30px;
+                margin-right: 30px;
+                align-items: center;
+                box-sizing: border-box;
+                
+            } // @media
 
             a{
                 align-items: center;
@@ -52,17 +81,30 @@ html{
                 text-decoration: none;
                font-size: .9rem;
                font-weight: bold;
+              
                &:hover{
                    color: red;
-               }
+               } // &:hover
+                @media(max-width: 500px){
+                    display: flex;
+                    flex-direction: column;
+                   color: black;
+                   padding-top: 10px;
+                   margin-top: 10px;
+                   margin-left: 10px;
+                   margin-right: 10px;
+                   justify-content: space-around;
+               } // @media
                
-            }
-            }
-        }
+            } // a , anchor 
+            
+        } // .nav-elem-container
+    } // nav closes here 
+
         .main-container{
             display: flex;
             flex-direction: row;
-        }
+        
         .aside-left{
             width: 25%;
             font-size: 1rem;
@@ -72,6 +114,11 @@ html{
             padding-top: 0px;
             box-sizing: border-box;
             background-color: pink;
+
+            @media (max-width: 500px){
+                display: none;
+            } // @media 
+
 
             .aside-title{
                 background-color: rgb(138, 131, 131);
@@ -87,76 +134,114 @@ html{
                     color: rgb(138, 131, 131);
                     // animation-delay: 3s;
                     // transition-delay: 3s;
-                }
-            }
-        }
+                }  // &:hover
+            } // .aside-title
+        }  // aside-left
+
+
         .text-right{
             width: 75%;
-             display: flex;
+            display: flex;
             flex-direction: column;
             box-sizing: border-box;
             font-size: 1rem;
             padding-right: 5%;
+            color: black;
+
+            @media(max-width: 500px){
+                width: 98%;
+                justify-content: center;
+                padding-left: 2%;
+                padding-right: 2%;
+                box-sizing: border-box;
+                
+            }  // @media
+       
 
             .parag-content-top{ 
                display: flex;
 
-               .child{
-                   width: 50%;
-                   height: auto;
-               }
-            
-              .child-image{
-                  width: 100%;
+               @media (max-width: 500px){
+                   display: flex;
+                   flex-direction: column;
+                   width: 100%;
+               }  // @media 
+           
+
+         .child{
+             padding-left: 1%;
+             box-sizing: border-box;
+             width: 50%;
+             height: auto;
+
+              @media (max-width: 500px){
+               display: flex;
+               width: 100%;
+               flex-direction: column;
+                 } // @media
 
                   .prof-image{
                       width: 100%;
                       height: 100%;
                       padding-top: 5%;
                       border-radius: 12px;
-                  }
-                
-              }
-              .child-text{
-            width: 100%;
-             padding-left: 2%;
+                  } // prof-image
+            
 
-              }
+              .child-text {
+               width: 100%;
+               padding-left: 2%;
 
-                }
-            }
+              } // .child-text
+            } // child 
+        }// . parag-content-top
 
-
-            .parag-title{
-            margin: 1%, 2%;
+             .parag-title{
+            margin: 0, 1%;
             font-size: 1rem;
             width: fit-content;
             padding: 1%;
             font-size: 1.2rem;
-             font-weight: bold;
+            font-weight: bold;
+
+             @media (max-width: 500px){
+                font-size: 2rem;
+                margin: auto;
+             } // @media 
+
+            }  // .parag-title
+           
             
            .parag-content{
-               color: rgb(218, 62, 62);
+               color: black;
                font-size: 1rem;
 
                @media (max-width: 500px){
                    display: flex;
-                   color: Green;
+                   flex-direction: column;
+                   color: black;
                    justify-content: center;
                    align-content: center;
                    font-size: 1.5rem;
+               
+                } // @ media
+            } // .parag-content
+         } // .text-right
+        } // .main-container
 
-
-               }
-           }
-            }
-        }
         .this-is-the-footer{
             background-color: gray;
             display: flex;
             width: 100%;
             justify-content: center;
             margin: auto;
+
+            @media(max-width: 500PX){
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                background-color: rgb(138, 131, 131);
+            }
 
 
             a{
@@ -172,10 +257,10 @@ html{
                     // width: fit-content;
                     border-radius: 3px;
 
-                    
+                }  // &:hoover 
+            }// anchor
+        }// this-is-the footer
 
-                }
-            }
-        }
-
-    }
+ }// body
+} // html
+    
