--- a/less/about.less
+++ b/less/about.less
@@ -94,6 +94,7 @@ html{
                    margin-left: 10px;
                    margin-right: 10px;
                    justify-content: space-around;
+                   font-size: 1.5rem;
                } // @media
                
             } // a , anchor 
@@ -197,10 +198,12 @@ html{
         }// . parag-content-top
 
              .parag-title{
-            margin: 0, 1%;
+            margin-top: 1%;
+            padding-top: 2%;
+            margin-bottom: 0;
+            box-sizing: border-box;
             font-size: 1rem;
             width: fit-content;
-            padding: 1%;
             font-size: 1.2rem;
             font-weight: bold;
 
@@ -240,7 +243,7 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                background-color: rgb(138, 131, 131);
+                background-color: rgb(131, 138, 134);
             }
 
 
@@ -250,12 +253,15 @@ html{
                 margin: 5%;
                 justify-content: center;
                 font-weight: bold;
+                font-size: .8rem;
+
+                @media(max-width: 500px){
+                    font-size: 1.5rem;
+                }
 
                 &:hover{
                     color: black;
-                    // background: white;
-                    // width: fit-content;
-                    border-radius: 3px;
+                    
 
                 }  // &:hoover 
             }// anchor
