--- a/less/about.less
+++ b/less/about.less
@@ -1,5 +1,6 @@
 html{
-    background-color: rgb(255, 247, 224);
+    // background-color: rgb(255, 247, 224);
+    //   background-color: white;
     margin: 0px;
     padding: 0px;
     // @import url('https://fonts.googleapis.com/css?family=Public+Sans&display=swap');
@@ -25,7 +26,7 @@ html{
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color:rgb(27, 182, 40);
+            // background-color:rgb(27, 182, 40);
              padding-top: 5px;
              padding-bottom: 5px;
              
@@ -42,7 +43,7 @@ html{
             .logo-container{
             width: 48%;
             font-size: 1.2rem;
-            color: rgb(165, 9, 9);
+            color: rgb(236, 22, 22);
             margin-left: 1%;
 
             @media (max-width: 500px) {
@@ -74,7 +75,7 @@ html{
                 width: fit-content;
                 margin: 1%, 2%;
                 padding: 1%;
-                color:white;
+                color: black;
                 word-wrap: nowrap;
                 justify-content: flex-end;
                 justify-content: space-around;
@@ -114,7 +115,7 @@ html{
             padding: 10px;
             padding-top: 0px;
             box-sizing: border-box;
-            background-color: pink;
+            // background-color: pink;
 
             @media (max-width: 500px){
                 display: none;
@@ -185,7 +186,7 @@ html{
                       width: 100%;
                       height: 100%;
                       padding-top: 5%;
-                      border-radius: 12px;
+                      border-radius: 50px;
                   } // prof-image
             
 
@@ -233,7 +234,7 @@ html{
         } // .main-container
 
         .this-is-the-footer{
-            background-color: gray;
+            // background-color: gray;
             display: flex;
             width: 100%;
             justify-content: center;
@@ -249,7 +250,7 @@ html{
 
             a{
                 font-size: .8rem;
-                color: whitesmoke;
+                color:black;
                 margin: 5%;
                 justify-content: center;
                 font-weight: bold;
