--- a/less/index.less
+++ b/less/index.less
@@ -140,6 +140,7 @@ table {
     .home-nav {
       display: flex;
       justify-content: space-evenly;
+      margin-bottom: -50px;
 
       .nav_item {
         margin-top: 7.5%;
@@ -160,6 +161,7 @@ table {
     background-image: url("https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
     background-repeat: no-repeat;
     height: 500px;
+
     h1 {
       display: flex;
       justify-content: center;
@@ -183,10 +185,12 @@ table {
     display: flex;
     justify-content: center;
     flex-direction: row;
+    margin: 0 auto;
 
     h3 {
       font-weight: bold;
       margin-top: 75px;
+      margin-left: 25px;
     }
 
     .feat-container1 {
@@ -226,3 +230,5 @@ table {
     margin-left: 475px;
   }
 }
+
+//Begin tablet Media Query
