--- a/less/index.less
+++ b/less/index.less
@@ -232,3 +232,47 @@ table {
 }
 
 //Begin tablet Media Query
+
+@media (max-width: 750px) {
+  .home-nav {
+    .logo {
+      display: none;
+    }
+
+    .nav_item {
+      display: none;
+    }
+  }
+
+  .dropdown {
+    .btn_btn-secondary_dropdown-toggle {
+      border: solid black 2px;
+      border-radius: 30px;
+      font-weight: bolder;
+      margin-right: 650px;
+    }
+  }
+
+  .header-CTA {
+    border: solid orange 3px;
+
+    .header-button {
+      display: none;
+    }
+  }
+
+  .bootstrap_button {
+    display: flex;
+    justify-content: center;
+    margin-top: -50px;
+
+    button {
+      width: 100px;
+    }
+  }
+
+  .copyright {
+    border: solid red 3px;
+    display: none;
+  }
+}
