--- a/less/about.less
+++ b/less/about.less
@@ -29,12 +29,14 @@ html{
             // background-color:rgb(27, 182, 40);
              padding-top: 5px;
              padding-bottom: 5px;
+        
              
              @media(max-width: 500px){
                  display: flex;
                  flex-direction: column;
                  text-align: center;
-                  background-color: rgb(255, 247, 224);
+                 border-bottom: 1px, solid, blue;
+                //   background-color: rgb(255, 247, 224);
                   color: black;
              } // @media
 
@@ -244,7 +246,7 @@ html{
                 display: flex;
                 flex-direction: column;
                 align-items: center;
-                background-color: rgb(131, 138, 134);
+                // background-color: rgb(131, 138, 134);
             }
 
 
@@ -258,6 +260,7 @@ html{
 
                 @media(max-width: 500px){
                     font-size: 1.5rem;
+                    text-decoration: none;
                 }
 
                 &:hover{
