--- a/css/index.css
+++ b/css/index.css
@@ -149,6 +149,13 @@ table {
   /* Green */
   color: white;
 }
+#main_container .top-nav .dropdown {
+  border: solid red 3px;
+  visibility: hidden;
+}
+#main_container .bootstrap_button {
+  visibility: hidden;
+}
 #main_container .header-CTA {
   background-image: url("https://images.unsplash.com/photo-1524995997946-a1c2e315a42f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-repeat: no-repeat;
@@ -175,6 +182,7 @@ table {
   justify-content: center;
   flex-direction: row;
   margin: 0 auto;
+  width: 100%;
 }
 #main_container .showcase-feats h3 {
   font-weight: bold;
@@ -182,19 +190,11 @@ table {
   margin-left: 25px;
 }
 #main_container .showcase-feats .feat-container1 {
+  width: 33%;
   padding: 20px;
 }
-#main_container .showcase-feats .feat-container2 {
-  padding: 20px;
-}
-#main_container .showcase-feats .feat-container2 p {
-  margin-top: 25px;
-}
-#main_container .showcase-feats .feat-container3 {
-  padding: 20px;
-}
-#main_container .showcase-feats .feat-container3 p {
-  margin-top: 25px;
+#main_container .showcase-feats .feat-container1 p {
+  margin-top: 20px;
 }
 #main_container .carousel-inner img {
   width: 300px;
@@ -218,15 +218,16 @@ table {
     border: solid black 2px;
     border-radius: 30px;
     font-weight: bolder;
-    margin-right: 650px;
+    visibility: visible;
   }
   .header-CTA .header-button {
-    display: none;
+    visibility: hidden;
   }
   .bootstrap_button {
     display: flex;
     justify-content: center;
     margin-top: -50px;
+    visibility: visible;
   }
   .bootstrap_button button {
     width: 100px;
@@ -234,5 +235,19 @@ table {
   .copyright {
     border: solid red 3px;
     display: none;
+  }
+}
+@media (max-width: 500px) {
+  body {
+    border: solid red 3px;
+    margin: 0 auto;
+    max-width: 500px;
+  }
+  body .showcase-feats h3 {
+    border: solid blue 3px;
+    display: none;
+  }
+  body .showcase-feats .feat-container1 {
+    border: solid orange 3px;
   }
 }
