Completed MVP, fixed mobile design bug.

--- a/less/index.less
+++ b/less/index.less
@@ -269,7 +269,6 @@ table {
   }
 
   .copyright {
-    border: solid red 3px;
     display: none;
   }
 }
@@ -278,18 +277,13 @@ table {
 //Start Mobile View
 @media (max-width: 500px) {
   body {
-    border: solid red 3px;
     margin: 0 auto;
     max-width: 500px;
+    overflow-x: hidden;
 
     .showcase-feats {
       h3 {
-        border: solid blue 3px;
         display: none;
-      }
-
-      .feat-container1 {
-        border: solid orange 3px;
       }
     }
   }
