--- a/less/index.css
+++ b/less/index.css
@@ -233,21 +233,16 @@ table {
     width: 100px;
   }
   .copyright {
-    border: solid red 3px;
     display: none;
   }
 }
 @media (max-width: 500px) {
   body {
-    border: solid red 3px;
     margin: 0 auto;
     max-width: 500px;
+    overflow-x: hidden;
   }
   body .showcase-feats h3 {
-    border: solid blue 3px;
     display: none;
-  }
-  body .showcase-feats .feat-container1 {
-    border: solid orange 3px;
   }
 }
