--- a/less/index.css
+++ b/less/index.css
@@ -176,6 +176,7 @@ table {
   width: 400px;
   height: 50px;
   font-size: 2em;
+  display: none;
 }
 #main_container .showcase-feats {
   display: flex;
